objects/Wave__c.object
<CustomObject>
    <fields>
        <fullName>APL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APL</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Waves (APL)</relationshipLabel>
        <relationshipName>Waves1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APM_first_name_del__c</fullName>
        <formula>Wave_APM__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APM first name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_comm_prog_variation_URL__c</fullName>
        <label>Acc. comm. prog variation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Access_category_4_5_assigned_reserved__c</fullName>
        <description>Roll-up summary count of support level 4b YP with assigned/reserved wave selections</description>
        <inlineHelpText>Count of support level 4b YP with assigned/reserved wave selections</inlineHelpText>
        <label>Support level 4b assigned/reserved</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status_equals_assigned_or_reserved__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Access_category_filter__c</field>
            <operation>contains</operation>
            <value>4b</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.HTR_Filter__c</field>
            <operation>notEqual</operation>
            <value>HTR YP</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Girl_Wave__c</fullName>
        <description>Tick when wave is an all girl wave</description>
        <label>All Girl Wave?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Ind_Sch_places_inc_over_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity (including overbooking and reserved places), to calculate number of remaining places</description>
        <formula>MIN( Online_booking_YP_place_capacity__c - Total_Reserved_Assigned__c ,  Ind_school_capacity_inc_overbooking__c  - Total_Ind_School_Reserved_Assign__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for someone at an independent school, including overbooking and reserved places</inlineHelpText>
        <label>All Ind Sch places (inc over) available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_female_places_inc_over_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity (including overbooking and reserved places), to calculate number of remaining places</description>
        <formula>MIN( Online_booking_YP_place_capacity__c - Total_Reserved_Assigned__c , YP_female_capacity_inc_overbooking__c  - Girls_Reserved_Assigned__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for girls, including overbooking and reserved places</inlineHelpText>
        <label>All female places (inc over) available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_male_places_inc_over_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity (including overbooking and reserved places), to calculate number of remaining places for boys</description>
        <formula>MIN( Online_booking_YP_place_capacity__c - Total_Reserved_Assigned__c , YP_male_capacity_inc_overbooking__c  - Boys_Reserved_Assigned__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for boys, including overbooking and reserved places</inlineHelpText>
        <label>All male places (inc over) available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_places_inc_overbooking_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity (including overbooking and reserved places), to calculate number of remaining place</description>
        <formula>YP_place_capacity_including_overbooking__c -  Total_Reserved_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places, including overbooking and reserved places</inlineHelpText>
        <label>All places (inc overbooking) available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Reserved_paid_on_Wave__c</fullName>
        <formula>Total_Reserved_Assigned__c  - Total_unpaid_reserved_or_assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned/Reserved paid on Wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_support_level_5_capacity__c</fullName>
        <description>Formula which refers to roll-up summary count of support level 5 YP on wave to ascertain capacity level, based on wave maximum of 2. Does not take any other factors (e.g. whether there are places at all available on the wave) into account</description>
        <formula>CASE( Support_level_5_assigned_reserved__c , 0, &quot;BELOW capacity - 2 spaces available&quot;, 1, &quot;BELOW capacity - 1 space available&quot;, 2, &quot;AT capacity - no spaces available&quot;, &quot;ABOVE capacity - reduce number on wave&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula which looks at number of support level 5 YP on wave to ascertain capacity level for more 5s, based on wave maximum of 2. Does not take any other factors (e.g. where there are places at all available on the wave) into account</inlineHelpText>
        <label>At support level 5 capacity?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autumn_wave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if wave is an Autumn wave</description>
        <inlineHelpText>Check if wave is an Autumn wave</inlineHelpText>
        <label>Autumn wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_KO_driving_and_parking__c</fullName>
        <description>Directions for driving to and parking near the KO venue</description>
        <label>Big Challenge KO driving and parking</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_KO_public_transport__c</fullName>
        <label>Big Challenge KO public transport nearby</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_KO_venue_address__c</fullName>
        <label>Big Challenge KO venue address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_SMS_address__c</fullName>
        <label>Big Challenge SMS address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_Challenge_date__c</fullName>
        <label>Big Challenge date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_option_for__c</fullName>
        <description>Area/borough (either school or home) that wave is a booking option for, as matched via wave priority and location fields. This field is not part of booking site: it is for human understanding purposes</description>
        <inlineHelpText>The area/borough (either school or home) that the wave is a booking option for. (This field is not part of the booking site: rather it exists to help us understand the options)</inlineHelpText>
        <label>Booking option for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preston</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Blackburn with Darwen</fullName>
                </value>
                <value>
                    <fullName>Wigan</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Rochdale</fullName>
                </value>
                <value>
                    <fullName>Salford</fullName>
                </value>
                <value>
                    <fullName>Oldham</fullName>
                </value>
                <value>
                    <fullName>Stockport</fullName>
                </value>
                <value>
                    <fullName>Tameside</fullName>
                </value>
                <value>
                    <fullName>Lancashire</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>North Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Solihull</fullName>
                </value>
                <value>
                    <fullName>South Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Birmingham NW</fullName>
                </value>
                <value>
                    <fullName>Birmingham SE</fullName>
                </value>
                <value>
                    <fullName>Birmingham NE</fullName>
                </value>
                <value>
                    <fullName>Birmingham SW</fullName>
                </value>
                <value>
                    <fullName>Walsall</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Wolverhampton</fullName>
                </value>
                <value>
                    <fullName>Sandwell</fullName>
                </value>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booklet_code__c</fullName>
        <inlineHelpText>Used to link the programme pack and timetable to the correct booklet for the mailing house</inlineHelpText>
        <label>Booklet code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boroughs_or_areas__c</fullName>
        <description>If you change any of the Picklist values for this field, please also ensure you change the values for Cluster Location Object - Boroughs Picklist and Account Object - Borough or Area field to ensure consistency across OBS.</description>
        <label>Boroughs or areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acocks Green</fullName>
                </value>
                <value>
                    <fullName>Aston</fullName>
                </value>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bartley Green</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Billesley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Blackburn with Darwen</fullName>
                </value>
                <value>
                    <fullName>Blackpool</fullName>
                </value>
                <value>
                    <fullName>Bordesley Green</fullName>
                </value>
                <value>
                    <fullName>Bournville</fullName>
                </value>
                <value>
                    <fullName>Bracknell Forest</fullName>
                </value>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>Brandwood</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Central Manchester</fullName>
                </value>
                <value>
                    <fullName>Chiltern</fullName>
                </value>
                <value>
                    <fullName>Chorley</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>CNE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CNW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>CSE Birmingham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boys_Assigned__c</fullName>
        <description>count of asigned boys on a wave</description>
        <label>Boys Assigned</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.Gender_Filter__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Boys_Reserved_Assigned__c</fullName>
        <formula>Boys_Assigned__c  +  Boys_Reserved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boys Reserved/Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boys_Reserved__c</fullName>
        <description>count of reserved boys on a wave</description>
        <label>Boys Reserved</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.Gender_Filter__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status__c</field>
            <operation>equals</operation>
            <value>Reserved</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Central_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CCT Admin responsible for wave</description>
        <label>CCT</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chal__c</fullName>
        <formula>Wave_Cluster__r.Challenge_Action_Leader_Training_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Challenge Action Leader Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Challenging_Behaviour__c</fullName>
        <formula>TEXT(PC_venue__r.Challenging_Behaviour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Challenging Behaviour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_school_capacity_inc_overbooking__c</fullName>
        <description>Number of places, including overbooking, available for YP at a champion school. Calculated from total capacity and champion school percentage limit</description>
        <formula>YP_place_capacity_including_overbooking__c * Champion_school_place_limit_percentage__c</formula>
        <inlineHelpText>Number of places, including overbooking, available for YP at a champion school. Calculated from total capacity and champion school percentage limit</inlineHelpText>
        <label>Champion school capacity inc overbooking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Champion_school_place_limit_percentage__c</fullName>
        <description>Percentage of YP on the wave who can attend from the same champion school</description>
        <inlineHelpText>Percentage of YP on the wave who can attend from the same champion school</inlineHelpText>
        <label>Champion school place limit percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Coach_on_Presentation_Day__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will there be a coach needed on Presentation day? Only uncheck if they will walk to the venue/get public transport.</description>
        <inlineHelpText>Will there be a coach needed on Presentation day? Or can they walk to the venue?</inlineHelpText>
        <label>Coach on Presentation Day?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_RCA_Timetable_Changed__c</fullName>
        <label>Completed RCA Timetable Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Timetable_Changed__c</fullName>
        <label>Completed Timetable Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Waves</relationshipLabel>
        <relationshipName>Waves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_female__c</fullName>
        <description>Formula which returns 1 if any girls are reserved/assigned; returns 0 if no girls are reserved/assigned. Formula is used within reports</description>
        <formula>IF (Girls_Reserved_Assigned__c  &gt; 0
, 
1
, 
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula which returns 1 if any girls are reserved/assigned; returns 0 if no girls are reserved/assigned. Formula is used within reports</inlineHelpText>
        <label>Count female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_male__c</fullName>
        <description>Formula which returns 1 if any boys are reserved/assigned; returns 0 if no boys are reserved/assigned. Formula is used within reports</description>
        <formula>IF (Boys_Reserved_Assigned__c  &gt; 0
, 
1
, 
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula which returns 1 if any boys are reserved/assigned; returns 0 if no boys are reserved/assigned. Formula is used within reports</inlineHelpText>
        <label>Count male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_RCA_Timetable_Sent__c</fullName>
        <label>Date RCA Timetable Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Timetable_Sent__c</fullName>
        <label>Date Timetable Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_wave_closed_on_OBS__c</fullName>
        <description>This is updated via workflow when Website display status is not blank and this field is blank</description>
        <inlineHelpText>This is updated via workflow when Website display status is not blank and this field is blank</inlineHelpText>
        <label>Date wave closed on OBS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_PC_KO__c</fullName>
        <formula>PC_KO_day__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to PC KO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previously labelled &quot;Delivery PM&quot;</description>
        <inlineHelpText>The wave staffing fields are currently being updated. If you have questions or concerns regarding these fields, please contact innovation.support@the-challenge.org</inlineHelpText>
        <label>Support PM 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WavesDelivPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_period_NCS__c</fullName>
        <description>NCS-defined period in which wave is delivered</description>
        <inlineHelpText>NCS-defined period in which wave is delivered</inlineHelpText>
        <label>Delivery period (NCS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Autumn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demand_is_Smoothed__c</fullName>
        <description>Multi-select Picklist Formula. Box is checked if demand smoothing is True for the Borough or Area (Birmingham, Manchester and London Boroughs)</description>
        <formula>IF (INCLUDES(Boroughs_or_areas__c , &quot;South Birmingham&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;North Birmingham&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Central Manchester&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Barking &amp; Dagenham&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Barnet&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Bexley&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Brent&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Bromley&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Camden&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Croydon&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Ealing&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Enfield&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Greenwich&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Hackney&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Hammersmith &amp; Fulham&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Haringey&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Harrow&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Havering&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Hillingdon&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Hounslow&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Islington&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Kensington &amp; Chelsea&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Kingston&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Lambeth&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Lewisham&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Merton&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Newham&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Redbridge&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Richmond&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Southwark&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Sutton&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Tower Hamlets&quot;), True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Waltham Forest&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Wandsworth&quot;),True, 
IF (INCLUDES(Boroughs_or_areas__c , &quot;Westminster&quot;), True, 
False 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
))</formula>
        <inlineHelpText>Multi-select Picklist Formula. Box is checked if demand smoothing is True for the Borough or Area (Birmingham, Manchester and London Boroughs)</inlineHelpText>
        <label>Demand is Smoothed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_PC_to_TC_break__c</fullName>
        <description>Formula, pulling through the sentence which describes the break between PC and TC, from  Wave Template. Used to merge into timetables for YP and PG</description>
        <formula>Wave_Template__r.Description_of_PC_to_TC_break__c</formula>
        <inlineHelpText>Sentence which describes the break between PC and TC. Used to merge into timetables for YP and PG.</inlineHelpText>
        <label>Description of PC to TC break</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_travel_time_for_YP_and_PG__c</fullName>
        <description>IF statement formula, which uses fields from Regions. Displays one field for wave 12s, and a different field for waves 1 - 11. Displays a sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG</description>
        <formula>IF( Wave_number__c = &quot;12&quot;, Wave_Cluster__r.Zone__r.Region__r.Description_of_YPPG_travel_time_Wave_12__c, Wave_Cluster__r.Zone__r.Region__r.Description_of_YPPG_travel_time_Wave1_11__c )</formula>
        <inlineHelpText>Sentence describing the travel time that YP and PG should leave in order to ensure they reach venues on time. Used to merge into the timetables supplied to YP and PG</inlineHelpText>
        <label>Description of travel time for YP and PG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_non_NCS_starters__c</fullName>
        <label>Details of non-NCS starters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diff_YP_on_Wave_and_Sales_figures__c</fullName>
        <formula>Total_on_wave_assigned_or_left__c - Mktg_total_number_of_YPs_on_wave__c - Number_of_additional_non_NCS_YPs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff YP on Wave and Sales figures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_YP_meet_at_RA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do YP meet at Residential Acommodation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_file_name__c</fullName>
        <description>Creates the root of the file name for the published links for Acceptance, PIE and Graduation for OBS</description>
        <formula>Document_label__c &amp; &quot;.pdf&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document file name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_label__c</fullName>
        <description>Should be the wave name in a format that can be used as a file name (used for the Published Acceptance, PIE, and Grad links)</description>
        <label>Document label</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_and_parking_directions__c</fullName>
        <label>Driving and parking directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Edwards_RCA1_date__c</fullName>
        <label>Edwards RCA1 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edwards_RCA2_date__c</fullName>
        <label>Edwards RCA2 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edwards_RCA3_date__c</fullName>
        <label>Edwards RCA3 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edwards_RCA_Mtg_Pt__c</fullName>
        <label>Edwards RCA Mtg Pt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Autofill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autofill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_override_wave__c</fullName>
        <description>Overrides, at a wave level, the usual fee for YPPG</description>
        <inlineHelpText>Enter a fee to override, at a wave level, the usual fee</inlineHelpText>
        <label>Fee override (wave)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flex__c</fullName>
        <label>Flex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>No flex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Girls_Assigned__c</fullName>
        <description>Girls assigned to a wave</description>
        <label>Girls Assigned</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.Gender_Filter__c</field>
            <operation>equals</operation>
            <value>Female</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Girls_Reserved_Assigned__c</fullName>
        <formula>Girls_Assigned__c + Girls_Reserved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Girls Reserved/Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Girls_Reserved__c</fullName>
        <description>count of reserved girls on wave</description>
        <label>Girls Reserved</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.Gender_Filter__c</field>
            <operation>equals</operation>
            <value>Female</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status__c</field>
            <operation>equals</operation>
            <value>Reserved</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grad_invite_guest_copy__c</fullName>
        <formula>IF( Number_of_Graduation_Guests_Permitted__c = 1, &quot;a guest&quot;,  TEXT(Number_of_Graduation_Guests_Permitted__c) + &quot; guests&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grad invite guest copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grad_payroll_date_time__c</fullName>
        <label>Grad payroll date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Graduation_Date_Formula__c</fullName>
        <formula>Wave_Cluster__r.Graduation_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Date Formula</label>
        <type>Date</type>
    </fields>
</CustomObject>